# NG_AK_POBI2024

./: .gitignore  README.txt
imaginarynumbers/: CMakeLists.txt
imaginarynumbers/source/: main.cpp
komenda/CarRental/program/: CMakeLists.txt
komenda/introduction/program/src/: main.cpp
